Fix overflow issues for moves + improvements panels

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@ body {
     padding: 1rem;
 
     @media (min-width: 50rem) {
+        height: 100vh;
         padding: 2rem;
     }
 }
@@ -21,6 +22,7 @@ button {
     gap: 1.5rem;
 
     @media (min-width: 50rem) {
+        height: 100%;
         flex-direction: row;
         justify-content: center;
     }
@@ -67,6 +69,7 @@ button {
 }
 
 .improvements {
+    overflow-y: auto;
     line-height: 1.5;
 }
 
@@ -173,11 +176,11 @@ button {
     gap: 0.25rem;
 }
 
-.moves::-webkit-scrollbar {
+.moves::-webkit-scrollbar, .improvements::-webkit-scrollbar {
     width: 0.8rem;
 }
 
-.moves::-webkit-scrollbar-thumb {
+.moves::-webkit-scrollbar-thumb, .improvements::-webkit-scrollbar-thumb{
     background: whitesmoke;
     border-radius: 1rem;
 }
